# sailingsim

./: Cargo.toml
src/: app.rs  main.rs
