[package]
name = "sailingsim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_water = {version = "0.15.2"}
bevy_spectator = { version = "0.7" }
# bevy_panorbit_camera = { version = "0.20", features = ["bevy_egui"] }
# bevy-inspector-egui = { version = "0.28" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[features]
debug = []
depth_prepass = []
panorbit = []